white spaces collapse issue fix in chat input

--- a/UI/chatWindow.css
+++ b/UI/chatWindow.css
@@ -1014,6 +1014,7 @@
     max-height: 70px;
     overflow-x: hidden;
     overflow-y: auto;
+    white-space: pre;
 }
 
 .kore-chat-window .kore-chat-footer .chatInputBoxPlaceholder {
